added readme and jar file