@@ -1,2 +1,9 @@
 # 206A2
 softeng206 A2
+
+To run the app:
+1. open terminal
+2. make sure it is in the same directory as this README
+3. enter this in the console, replacing the quotation marks with your javafx library directory
+
+java --module-path "YOUR JAVAFX LIBRARY DIR" --add-modules javafx.controls,javafx.fxml -Djdk.gtk.version=2 -jar A2.jar 
